--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.required::before {
+  content: '*'; 
+  color: red; 
+  margin-right: 4px; 
+  position: relative; 
+  top: -2px; 
+}
