--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
 @import "tailwindcss";
 
 body, * {
-  margin: 0;
+  /* margin: 0; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Poppins',
     sans-serif;
